syntax = "proto3";

package opentalon.channel.v1;

option go_package = "github.com/opentalon/opentalon/proto/channelpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ChannelService {
  rpc ReceiveMessages(stream InboundMessage) returns (stream OutboundMessage);
  rpc Capabilities(google.protobuf.Empty) returns (ChannelCapabilities);
}

message InboundMessage {
  string channel_id = 1;
  string conversation_id = 2;
  string thread_id = 3;
  string sender_id = 4;
  string sender_name = 5;
  string content = 6;
  repeated FileAttachment files = 7;
  map<string, string> metadata = 8;
  google.protobuf.Timestamp timestamp = 9;
}

message OutboundMessage {
  string conversation_id = 1;
  string thread_id = 2;
  string content = 3;
  repeated FileAttachment files = 4;
  map<string, string> metadata = 5;
}

message FileAttachment {
  string name = 1;
  string mime_type = 2;
  bytes data = 3;
  int64 size = 4;
}

message ChannelCapabilities {
  string id = 1;
  string name = 2;
  bool threads = 3;
  bool files = 4;
  bool reactions = 5;
  bool edits = 6;
  int64 max_message_length = 7;
}
